server/staging_env/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: staging
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
      namespace: staging
  template:
    metadata:
      labels:
        app: web-app
        namespace: staging
    spec:
      containers:
        - name: web-app
          image: REGISTRY_HOSTNAME/GKE_GCR/IMAGE:GITHUB_SHA                  
          #image: gcr.io/light-quest-349811/web-app@sha256:7cbc51fc3fb2954521d016ec6cd0a4ca5ee5f1261c961c46754f63b518ad54ce
          ports:
            - containerPort: 8069
          resources:
            limits:
              cpu: 500m 
            requests:
              cpu: 400m                                        
#when  go to prodction  must use limits cpu: 1   requests: cpu: 0.5 beacuse on my case the quota is limited.#       #
