server/staging_env/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: postgres
 #namespace: GH_USERNAME
spec:
 strategy:
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 1
   type: RollingUpdate
 replicas: 1
 selector:
   matchLabels:
     app: postgres
 template:
   metadata:
     labels:
       app: postgres
   spec:
     containers:
       - name: postgres
         image: postgres:14
         args: ["-c", "max_connections=1000"]  
         lifecycle:
           postStart:
                exec:
                  # # command: ["/bin/sh", "-c", "su - postgres -c 'createuser -s odoo' "]
                   command: ["/bin/sh", "-c", " adduser  odoo  "]
                  #command: ["/bin/sh", "-c", "su - postgres && psql -c 'CREATEUSER eman   WITH PASSWORD 'eman';'"]

      
         resources:
           limits:
             cpu: "1"
             memory: "1Gi"
           requests:
             cpu: "1"
             memory: "1Gi"
         ports:
           - containerPort: 5432
         volumeMounts:
           - mountPath: /var/lib/postgresql/data
             name: postgredb
     volumes:
       - name: postgredb
         persistentVolumeClaim:
           claimName: postgresql-pv
