server/staging_env/web-app-service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "web-app-service"
  #namespace: staging
  labels:
    app: "web-app"
spec:
  ports:
    - protocol: "TCP"
      port: 8069
      targetPort: 8069
  selector:
    app: "web-app"
  type: "LoadBalancer"
